crates/core/tests/snapshots/corpus__高知大学における早期卒業に関する規則@高知大学における早期卒業に関する規則.pdf.snap
---
source: crates/core/tests/corpus.rs
expression: doc
input_file: sources/高知大学における早期卒業に関する規則.pdf
---
{
  "title": "高知大学における早期卒業に関する規則",
  "enacted": {
    "date": {
      "era": "heisei",
      "year": 16,
      "month": 4,
      "day": 1,
      "iso": "2004-04-01"
    },
    "rule_number": {
      "number": 135,
      "year": null,
      "raw": "規則第135号"
    },
    "raw": "平成16年４月１日 規則第135号"
  },
  "last_amended": {
    "date": {
      "era": "reiwa",
      "year": 7,
      "month": 5,
      "day": 9,
      "iso": "2025-05-09"
    },
    "rule_number": {
      "number": 13,
      "year": null,
      "raw": "規則第13号"
    },
    "raw": "最終改正  令和７年５月９日規則第13号"
  },
  "full_amendment_note": null,
  "body": [
    {
      "type": "article",
      "number": {
        "main": 1,
        "branch": null
      },
      "title": "趣旨",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則は、高知大学学則第53条第３項の規定に基づき、高知大学（以下「本学」という｡）における早期卒業に関し必要な事項を定める。",
          "items": [],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 2,
        "branch": null
      },
      "title": "対象学生",
      "paragraphs": [
        {
          "number": 1,
          "text": "早期卒業の対象となる学生は、本学に３年間在学し、卒業の要件として学部の定める単位を優秀な成績をもって修得したと認められる者とする。ただし、再入学、編入学及び転入学した学生は、早期卒業の対象とならない。",
          "items": [],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 3,
        "branch": null
      },
      "title": "早期卒業適格者の認定・履修指導",
      "paragraphs": [
        {
          "number": 1,
          "text": "第１年次第１学期から第２年次第１学期までのすべての学期において高知大学における授業科目の履修登録単位の上限に関する規則第５条に規定する成績優秀者（以下「成績優秀者」という。）のうち早期卒業を希望する者は、第２年次第１学期末に各学部長にその旨を申し出るものとする。",
          "items": [],
          "refs": []
        },
        {
          "number": 2,
          "text": "学部教授会は、前項の申請に基づき、適格か否かを審査し、その結果を当該学生に通知するものとする。",
          "items": [],
          "refs": []
        },
        {
          "number": 3,
          "text": "前項の審査の結果、早期卒業のための履修を認められた学生（以下「早期卒業適格者」という。）には、適切な授業計画を指導することによって授業科目の履修開始年次の制限を緩和すること（以下「早期卒業特別履修」という。）を認める。",
          "items": [],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 4,
        "branch": null
      },
      "title": "早期卒業見込者の認定等",
      "paragraphs": [
        {
          "number": 1,
          "text": "学部教授会は、早期卒業適格者に対し、第２年次終了時に卒業論文・卒業研究（以下「卒業論文等」という｡）履修等の早期卒業のための履修の継続の可否を審査し、その結果を当該学生に通知するものとする。",
          "items": [],
          "refs": []
        },
        {
          "number": 2,
          "text": "卒業論文等履修の資格を得るためには、各学部で定める卒業論文等履修に要する単位を修得し、かつ、第２年次第２学期においても成績優秀者でなければならない。",
          "items": [],
          "refs": []
        },
        {
          "number": 3,
          "text": "第１項の審査の結果、早期卒業のための履修の継続を認められた学生（以下「早期卒業見込者」という｡）には、第３年次において卒業見込証明書を発行できるものとする。",
          "items": [],
          "refs": []
        },
        {
          "number": 4,
          "text": "第１項の審査の結果、早期卒業のための履修の継続を認められなかった者は、以後の早期卒業特別履修を認めないものとする。ただし、それまでに修得した科目の単位については、認めるものとする。",
          "items": [],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 5,
        "branch": null
      },
      "title": "早期卒業見込者の中間審査",
      "paragraphs": [
        {
          "number": 1,
          "text": "学部教授会は、早期卒業見込者に対し、第３年次第１学期末に中間審査を行う。",
          "items": [],
          "refs": []
        },
        {
          "number": 2,
          "text": "中間審査に合格するためには、第１年次から第３年次第１学期までに成績評価を受けたすべての卒業に要する科目のＧＰＡが3.0以上でなければならない。ただし、第３年次第１学期の定期試験期間後に行われる集中講義は、ＧＰＡ算出の対象から除くものとする。",
          "items": [],
          "refs": []
        },
        {
          "number": 3,
          "text": "中間審査に不合格となった者には、前条第４項を準用し、当該年度中の卒業見込証明書の発行を認めないものとする。",
          "items": [],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 6,
        "branch": null
      },
      "title": "卒業判定",
      "paragraphs": [
        {
          "number": 1,
          "text": "学部教授会は、前条の中間審査に合格した者に対し、第３年次終了時に卒業の判定を行う。",
          "items": [],
          "refs": []
        },
        {
          "number": 2,
          "text": "卒業するためには、学部で定める卒業に要する単位を修得しなければならない。",
          "items": [],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 7,
        "branch": null
      },
      "title": "卒業の時期",
      "paragraphs": [
        {
          "number": 1,
          "text": "早期卒業の時期は、第３年次の３月とする。",
          "items": [],
          "refs": []
        }
      ],
      "subordinate_rules": []
    },
    {
      "type": "article",
      "number": {
        "main": 8,
        "branch": null
      },
      "title": "雑則",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則に定めるもののほか、早期卒業に関し必要な事項は、学部において別に定める。",
          "items": [],
          "refs": []
        }
      ],
      "subordinate_rules": []
    }
  ],
  "supplementary_provisions": [
    {
      "ordinal": 1,
      "heading_raw": "附  則",
      "amendment": null,
      "promulgated": null,
      "effective": {
        "kind": "date",
        "era": "heisei",
        "year": 16,
        "month": 4,
        "day": 1,
        "iso": "2004-04-01"
      },
      "text": "この規則は、平成16年４月１日から施行する。ただし、医学部の学生を除く。",
      "references_tables": []
    },
    {
      "ordinal": 2,
      "heading_raw": "附  則（平成16年12月27日規則第419号）",
      "amendment": {
        "number": 419,
        "year": null,
        "raw": "規則第419号"
      },
      "promulgated": {
        "era": "heisei",
        "year": 16,
        "month": 12,
        "day": 27,
        "iso": "2004-12-27"
      },
      "effective": {
        "kind": "date",
        "era": "heisei",
        "year": 17,
        "month": 4,
        "day": 1,
        "iso": "2005-04-01"
      },
      "text": "この規則は、平成17年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 3,
      "heading_raw": "附  則（平成20年３月26日規則第127号）",
      "amendment": {
        "number": 127,
        "year": null,
        "raw": "規則第127号"
      },
      "promulgated": {
        "era": "heisei",
        "year": 20,
        "month": 3,
        "day": 26,
        "iso": "2008-03-26"
      },
      "effective": {
        "kind": "date",
        "era": "heisei",
        "year": 20,
        "month": 4,
        "day": 1,
        "iso": "2008-04-01"
      },
      "text": "この規則は、平成20年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 4,
      "heading_raw": "附  則（平成25年１月23日規則第60号）",
      "amendment": {
        "number": 60,
        "year": null,
        "raw": "規則第60号"
      },
      "promulgated": {
        "era": "heisei",
        "year": 25,
        "month": 1,
        "day": 23,
        "iso": "2013-01-23"
      },
      "effective": {
        "kind": "date",
        "era": "heisei",
        "year": 25,
        "month": 1,
        "day": 23,
        "iso": "2013-01-23"
      },
      "text": "この規則は、平成25年１月23日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 5,
      "heading_raw": "附  則（平成27年３月25日規則第157号）",
      "amendment": {
        "number": 157,
        "year": null,
        "raw": "規則第157号"
      },
      "promulgated": {
        "era": "heisei",
        "year": 27,
        "month": 3,
        "day": 25,
        "iso": "2015-03-25"
      },
      "effective": {
        "kind": "date",
        "era": "heisei",
        "year": 27,
        "month": 4,
        "day": 1,
        "iso": "2015-04-01"
      },
      "text": "１  この規則は、平成27年４月１日から施行する。\n２  この規則の施行日以前に在学し、引き続きこの規則の施行日に在学する者については、\n改正後の高知大学における早期卒業に関する規則にかかわらず、なお従前の例による。",
      "references_tables": []
    },
    {
      "ordinal": 6,
      "heading_raw": "附  則（令和７年５月９日規則第13号）",
      "amendment": {
        "number": 13,
        "year": null,
        "raw": "規則第13号"
      },
      "promulgated": {
        "era": "reiwa",
        "year": 7,
        "month": 5,
        "day": 9,
        "iso": "2025-05-09"
      },
      "effective": {
        "kind": "date",
        "era": "reiwa",
        "year": 7,
        "month": 5,
        "day": 9,
        "iso": "2025-05-09"
      },
      "text": "この規則は、令和７年５月９日から施行する。",
      "references_tables": []
    }
  ],
  "appendices": [],
  "authorities": []
}
